integrate Radu advices

--- a/nodejs/mizot/views/layout.jade
+++ b/nodejs/mizot/views/layout.jade
@@ -21,11 +21,11 @@ html(lang="en")
           div#img_div
               img#me_img(src="img/id.jpg")
           br
-          div#welcome <span class="capital">W</span>elcome here, I'm Remi Melisson, enthusiast developer. I'm currently located in France but I plan to move to London during the 2012 summer.
+          div#welcome <span class="capital">W</span>elcome to my page! I'm Remi Melisson, an enthusiastic software developer. I'm currently located in France but I plan to move to London during the summer of 2012.
           br
-          p.alinea I like great code (i.e. clean, elegant, well-tested, efficient, SOLID…) and I'm looking for a position where code quality matters. I'm passionate by my work and I pay attention to the software community. During the past years, I was involved in the research area where I learned to stand back and look ahead. 
-          p.alinea I would like to join an enthusiast team, using adapted technologies in order to solve problems, challenges. Currently, I'm especially interested by scalable needs, for example in the scope of big data or cloud computing. But any field where performance matters might motivate me.
-          p.alinea Here you can find information about my background and my early career. Feel free to contact me via email, Linked In or why not, smoke signals. 
+          p.alinea I like great code (i.e. clean, elegant, well-tested, efficient, SOLID…) and I'm looking for a position where code quality matters. I'm passionate about my work and I follow closely the new topics in the software community. During the past years, I was mostly involved in research projects where I learned to stand back and look ahead. 
+          p.alinea I would like to join an enthusiastic team, that uses adapted technologies in order to solve problems and challenges. Currently, I'm especially interested in scalability needs, for example in the scope of big data or cloud computing. But any field where performance matters might motivate me.
+          p.alinea Here you can find information about my background and my early career. Feel free to contact me via email, LinkedIn or why not, smoke signals. 
         div.content.invisible_content#contact Well, you can find me <a href="http://maps.google.fr/maps/place?q=Orange+R%26D+Meylan&hl=en&cid=8451382217444420832" target="_blank">there</a> : <br /><br />
             span#liam
                 <img src="http://upload.wikimedia.org/wikipedia/en/0/0a/Gmail_logo.png" style="width:100px;" alt="send me" onclick="confirm('rmelisson gmail.com');"/> 
@@ -89,7 +89,7 @@ html(lang="en")
             span.hash3 2004-09
             span.cv_line Waiter, delivery man, summer camp supervisor (and trainer for supervisor), maths teacher 
             br
-            span.cv_uline Where I have learnt to work with all kinds of people and to develop my teamwork skills under different context
+            span.cv_uline Where I learned to work with all kinds of people and to develop my teamwork skills under different context
             br
             br
             h3.center Education
@@ -111,16 +111,16 @@ html(lang="en")
             br
             h3.center Software Engineering
             br
-            span.hash3 Langages
-            span.cv_uline I'm mainly using Java and Python, but I experienced a bunch of different langages (from C to Haskell...) and I would definitly choose the adapted one rather than my favorite. I'm curently interested by Scala and I would be glad to go deeper into it.
+            span.hash3 Languages
+            span.cv_uline I'm mainly using Java and Python, but I've used a bunch of different programming languages (from C to Haskell...) and I would definitly choose the adapted one rather than my favorite. I'm curently interested by Scala and I would be glad to go deeper into it.
             br
             br
             span.hash3 Tools & Frameworks
-            span.cv_uline My favourites are Vim, Git, Maven, IntelliJ IDE. I appreciated usage of Sonar, OSGi, Spring, Hibernate, .Net, xText, RoR, Android SDK. It would be a pleasure to go deeper into Hadoop and Mahout, noSQL databases, nodeJS or other scalability enablers.
+            span.cv_uline My favourites are Git, Maven, Vim, IntelliJ IDE. I appreciated using Sonar, OSGi, Spring, Hibernate, .Net, xText, RoR, Android SDK. It would be a pleasure to go deeper into Hadoop and Mahout, noSQL databases, nodeJS or other scalability enablers.
             br
             br
             span.hash3 Engineering
-            span.cv_uline I'm familiar with OOP concept, Service Oriented Architectures, SOLID principles and Uncle Bob advices. Even if I never experienced it in real life, agile movement appears to be the solution for driving project and I hope to be able to continually deploy my next software project with the help of a devops enable team. Finally, in my opinion Cloud computing and Big data are both buzz words and really interested feeds, but they are mainly exciting enginnering topics.
+            span.cv_uline I master OOP concepts, Service Oriented Architectures, SOLID principles and Uncle Bob advices. Even if I never experienced it yet in my projects, agile movement appears to be a good solution for driving project and I hope to be able to continuously deploy my next software project with the help of a DevOps team. Finally, in my opinion Cloud computing and Big data are both buzz words and really interested feeds, but they are mainly exciting enginnering topics.
             br
 
         div.content.invisible_content#work
@@ -139,17 +139,17 @@ html(lang="en")
               span.tech CSS3 Media Queries
               | , we designed an
               span.tech API
-              |  and allow deployment of standard 
+              |  (for heterogeneous clients) and allow the deployment of standard 
               span.tech DLNA
               |  services into the WAN.
             h3 Facil
-            p.small Facil is a web application that enable access for Colombian citizens to administrative documents in order to let them trigger justice action without the need of a lawer. It is a 
+            p.small Facil is a web application that enables the access for Colombian citizens to administrative documents in order to let them trigger justice action without the need of a lawyer. It is a 
               span.tech Ruby on Rails
               |  application, deployed on 
               span.tech Heroku
               |  which will be available in a few months.
             h3 Mundle
-            p.small Mundle is a tool which provide a way for dynamically convert 
+            p.small Mundle is a tool which provides a way for dynamically convert 
               span.tech Maven
               |  artifact into 
               span.tech OSGi
@@ -161,11 +161,11 @@ html(lang="en")
               span.tech SCA
               |  standard. It relies on the Fracal component model in order to allow dynamic reconfiguration on SCA based software. I was working on a merge between SCA and OSGi concept which could clarify the different responsibilities of those specifications.
             h3 Binjiu
-            p.small Binjiu is a set of facility for using 
+            p.small Binjiu is a set of tools for using 
               span.tech UPnP
               |  protocol in order to achieve remote calls within
               span.tech Java
-              |  distributed applications. Building on top of CyberLink for Java (which is a java implementation of UPnP protocol), it supplies the discovery benefits of UPnP to service oriented Java software. It was before Cling, which is now the best UPnP tool for Java.
+              |  distributed applications. Built on top of CyberLink for Java (which is a java implementation of the UPnP protocol), it supplies the discovery benefits of UPnP to service oriented Java software. It was before Cling was available, which is now the best UPnP tool for Java.
             h3 MIND Project
             p.small This project aims to provide a model and a valid infrastructure for developing lightweight (as well as dramatically lightweight) embedded software according to component based software engineering paradigms. More precisely, we are taking part in the development of an IDE (textual and graphical integrated editors) for component architecture definition. Using Eclipse Modeling Framework 
               span.tech EMF
@@ -175,7 +175,7 @@ html(lang="en")
               span.tech xText
               | .
             h3 Pass GRL
-            p.small A case in point of a standard serious web-based application build upon the 
+            p.small A case in point of a standard serious web-based application build on the 
               span.tech .Net
               |  ecosystem. Using 
               span.tech NHibernate
@@ -185,4 +185,4 @@ html(lang="en")
               span.tech Oracle DB
               | 
               span.tech jQuery
-              |  in a well-decoupled architecture, it was my first experience of a real-world application. I was in charge of maintaining it, and make it evolve according to client needings.
+              |  in a well-decoupled architecture, it was my first experience of a real-world application. I was in charge of maintaining it, and make it evolve according to client needs.
