integrate Radu remarks

--- a/nodejs/mizot/views/layout.jade
+++ b/nodejs/mizot/views/layout.jade
@@ -21,7 +21,7 @@ html(lang="en")
           div#img_div
               img#me_img(src="img/id.jpg")
           br
-          div#welcome <span class="capital">W</span>elcome to my page! I'm Remi Melisson, an enthusiastic software developer. I'm currently located in France but I plan to move to London during the summer of 2012.
+          div#welcome <span class="capital">W</span>elcome to my page! I'm Remi Melisson, an enthusiastic software developer. I'm currently located in France but I plan to move to London during summer 2012.
           br
           p.alinea I like great code (i.e. clean, elegant, well-tested, efficient, SOLID…) and I'm looking for a position where code quality matters. I'm passionate about my work and I follow closely the new topics in the software community. During the past years, I was mostly involved in research projects where I learned to stand back and look ahead. 
           p.alinea I would like to join an enthusiastic team, that uses adapted technologies in order to solve problems and challenges. Currently, I'm especially interested in scalability needs, for example in the scope of big data or cloud computing. But any field where performance matters might motivate me.
@@ -34,7 +34,7 @@ html(lang="en")
             <a href="http://www.github.com/rmelisson" target="_blank"><img src="https://github.com/github/media/raw/master/logos/github_logo_social_coding_outlined.png" alt="me on GitHub" style="width:85px;"/></a>
             <br/>
             <br/>
-            <a href="http://www.linkedin.com/profile/view?id=76022946&trk=tab_pro" target="_blank"><img src="http://fr.press.linkedin.com/sites/all/themes/presslinkedin/images/LinkedIn_IN_Icon_55px.jpg" alt="me on LinkedIn"/></a>
+            <a href="http://fr.linkedin.com/pub/r%C3%A9mi-m%C3%A9lisson/21/562/916?trk=pub-pbmap" target="_blank"><img src="http://fr.press.linkedin.com/sites/all/themes/presslinkedin/images/LinkedIn_IN_Icon_55px.jpg" alt="me on LinkedIn"/></a>
             <br/>
             <br/>
             <a href="https://profiles.google.com/u/0/112651096543043920931" target="_blank"><img src="img/g-plus-icon.png" alt="Follow me on G+"/></a>
@@ -77,7 +77,7 @@ html(lang="en")
               a(href="http://www.open-groupe.com", target="_blank") Open 
               |for 6 months. Paris
             br
-            span.cv_uline .Net, Spring, NHibernate - Project management 
+            span.cv_uline .NET, Spring.NET, NHibernate - Project management 
             br
             br
             span.hash3 2008
@@ -89,7 +89,7 @@ html(lang="en")
             span.hash3 2004-09
             span.cv_line Waiter, delivery man, summer camp supervisor (and trainer for supervisor), maths teacher 
             br
-            span.cv_uline Where I learned to work with all kinds of people and to develop my teamwork skills under different context
+            span.cv_uline Where I learned to work with all kinds of people and to develop my teamwork skills under different contexts
             br
             br
             h3.center Education
@@ -112,7 +112,7 @@ html(lang="en")
             h3.center Software Engineering
             br
             span.hash3 Languages
-            span.cv_uline I'm mainly using Java and Python, but I've used a bunch of different programming languages (from C to Haskell...) and I would definitly choose the adapted one rather than my favorite. I'm curently interested by Scala and I would be glad to go deeper into it.
+            span.cv_uline I'm mainly using Java and Python, but I've used a bunch of different programming languages (from C to Haskell...) and I would definitely choose the adapted one rather than my favorite. I'm currently interested in Scala and I would be glad to go deeper into it.
             br
             br
             span.hash3 Tools & Frameworks
@@ -120,7 +120,7 @@ html(lang="en")
             br
             br
             span.hash3 Engineering
-            span.cv_uline I master OOP concepts, Service Oriented Architectures, SOLID principles and Uncle Bob advices. Even if I never experienced it yet in my projects, agile movement appears to be a good solution for driving project and I hope to be able to continuously deploy my next software project with the help of a DevOps team. Finally, in my opinion Cloud computing and Big data are both buzz words and really interested feeds, but they are mainly exciting enginnering topics.
+            span.cv_uline I master OOP concepts, Service Oriented Architectures, SOLID principles and Uncle Bob advices. Even if I never experienced it yet in my projects, agile movement appears to be a good solution for software developement and I hope to be able to continuously deploy my next software project with the help of a DevOps team. Finally, even if "Cloud computing" and "Big data" are both buzz words, I think they are mainly exciting enginnering topics.
             br
 
         div.content.invisible_content#work
@@ -165,7 +165,7 @@ html(lang="en")
               span.tech UPnP
               |  protocol in order to achieve remote calls within
               span.tech Java
-              |  distributed applications. Built on top of CyberLink for Java (which is a java implementation of the UPnP protocol), it supplies the discovery benefits of UPnP to service oriented Java software. It was before Cling was available, which is now the best UPnP tool for Java.
+              |  distributed applications. Built on top of CyberLink for Java (which is a Java implementation of the UPnP protocol), it supplies the discovery benefits of UPnP to service oriented Java software. It was before Cling was available, which is now the best UPnP tool for Java.
             h3 MIND Project
             p.small This project aims to provide a model and a valid infrastructure for developing lightweight (as well as dramatically lightweight) embedded software according to component based software engineering paradigms. More precisely, we are taking part in the development of an IDE (textual and graphical integrated editors) for component architecture definition. Using Eclipse Modeling Framework 
               span.tech EMF
@@ -175,8 +175,8 @@ html(lang="en")
               span.tech xText
               | .
             h3 Pass GRL
-            p.small A case in point of a standard serious web-based application build on the 
-              span.tech .Net
+            p.small A case in point of a serious web-based application build on the 
+              span.tech .NET
               |  ecosystem. Using 
               span.tech NHibernate
               | 
@@ -185,4 +185,4 @@ html(lang="en")
               span.tech Oracle DB
               | 
               span.tech jQuery
-              |  in a well-decoupled architecture, it was my first experience of a real-world application. I was in charge of maintaining it, and make it evolve according to client needs.
+              |  in a well-decoupled architecture, it was my first experience of a real-world application, used daily by 500 people. I was in charge of maintaining it, and make it evolve according to client needs.
