--- a/nodejs/mizot/views/layout.jade
+++ b/nodejs/mizot/views/layout.jade
@@ -46,7 +46,7 @@ html(lang="en")
             span.center Download my resume :&nbsp;&nbsp;
                   a(href='/', 'french resume') FR
                   \ / 
-                  a(href='/', 'english resume') EN
+                  a(href="content/RemiMelisson-CV-en.pdf", 'english resume') EN
             br
             hr
             br
@@ -116,11 +116,11 @@ html(lang="en")
             br
             br
             span.hash3 Tools & Frameworks
-            span.cv_uline My favourites are Git, Maven, Vim, IntelliJ IDE. I appreciated using Sonar, OSGi, Spring, Hibernate, .Net, xText, RoR, Android SDK. It would be a pleasure to go deeper into Hadoop and Mahout, noSQL databases, nodeJS or other scalability enablers.
+            span.cv_uline My favorites are Git, Maven, Vim, IntelliJ IDE. I appreciated using Sonar, OSGi, Spring, Hibernate, .Net, xText, RoR, Android SDK. It would be a pleasure to go deeper into Hadoop and Mahout, noSQL databases, nodeJS or other scalability enablers.
             br
             br
             span.hash3 Engineering
-            span.cv_uline I master OOP concepts, Service Oriented Architectures, SOLID principles and Uncle Bob advices. Even if I never experienced it yet in my projects, agile movement appears to be a good solution for software developement and I hope to be able to continuously deploy my next software project with the help of a DevOps team. Finally, even if "Cloud computing" and "Big data" are both buzz words, I think they are mainly exciting enginnering topics.
+            span.cv_uline I master OOP concepts, Service Oriented Architectures, SOLID principles and Uncle Bob advices. Even if I never experienced it yet in my projects, agile movement appears to be a good solution for software development and I hope to be able to continuously deploy my next software project with the help of a DevOps team. Finally, even if "Cloud computing" and "Big data" are both buzz words, I think they are mainly exciting engineering topics.
             br
 
         div.content.invisible_content#work
@@ -186,3 +186,4 @@ html(lang="en")
               | 
               span.tech jQuery
               |  in a well-decoupled architecture, it was my first experience of a real-world application, used daily by 500 people. I was in charge of maintaining it, and make it evolve according to client needs.
+    br
