--- a/nodejs/mizot/views/layout.jade
+++ b/nodejs/mizot/views/layout.jade
@@ -43,8 +43,7 @@ html(lang="en")
             <a href="http://www.twitter.com/rmelisson" target="_blank"><img src="https://si0.twimg.com/a/1334246584/images/logos/twitter_newbird_boxed_whiteonblue.png" style="width:55px;" alt="Follow rmelisson on Twitter"/></a>
 
         div.content.invisible_content#resume 
-            span.center Download my resume :&nbsp;&nbsp;
-                  a(href='/', 'french resume') FR
+            span.center Download my resume :&nbsp;&nbsp;FR
                   \ / 
                   a(href="content/RemiMelisson-CV-en.pdf", 'english resume') EN
             br
@@ -121,6 +120,19 @@ html(lang="en")
             br
             span.hash3 Engineering
             span.cv_uline I master OOP concepts, Service Oriented Architectures, SOLID principles and Uncle Bob advices. Even if I never experienced it yet in my projects, agile movement appears to be a good solution for software development and I hope to be able to continuously deploy my next software project with the help of a DevOps team. Finally, even if "Cloud computing" and "Big data" are both buzz words, I think they are mainly exciting engineering topics.
+            br
+            br
+            hr
+            br
+            h3.center Referees
+            br
+            span.cv_line Lionel Seinturier  
+            span.cv_uline &nbsp;&nbsp;Professor at University of Lille, superior : 
+              a(href="http://www.lifl.fr/~seinturi/", target ="_blank") web page
+            br
+            span.cv_line Radu Kopetz  
+            span.cv_uline &nbsp;&nbsp;Superior at Orange R&D :  
+              a(href="http://www.linkedin.com/in/radukopetz", target ="_blank") web page
             br
 
         div.content.invisible_content#work
