--- a/nodejs/isoldry/views/layout.jade
+++ b/nodejs/isoldry/views/layout.jade
@@ -16,4 +16,6 @@ html(lang="fr")
             div#left
                 img#logo(src="img/logo.png")
             div#right 
-                p Bienvenue chez Isoldry, le spécialiste des systèmes de revêtement de facade Dryvit. <br /> ____ _ ____ <br/> <br/> Notre site internet est actuellement en construction.
+                p Bienvenue chez Isoldry, le spécialiste des systèmes de revêtement de facade Dryvit. 
+                p Notre site internet est actuellement en construction. 
+                p Tél. : 03 61 76 18 00 <br /> Fax : 03 20 00 81 40 <br /> Email : contact@isoldry.com
